[package]
name = "filesink"
version = "0.2.0"
authors = ["Oskar Homburg <oskar@ohomburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1.20"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
constant_time_eq = "0.1.4"
